# pgqb

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/api/: builder.md  index.md
docs/css/: termynal.css
docs/js/: custom.js
pgqb/: __init__.py  _snake.py  builder.py  types.py
requirements/: docs.in  docs.txt  linting.txt  pyproject.txt  testing.txt
scripts/: mypy.sh  tests.sh
tests/: test_builder.py  test_snake.py  test_types.py
